k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: sampleapp-container
        image: cepgbaseacr.azurecr.io/sampleapp:latest
        ports:
        - containerPort: 8080
