k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-service
spec:
  selector:
    app: sampleapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
